überarbeitete UI EditTask verbesserte Menuführung

--- a/QuestBoard/Views/Project/Add.cshtml
+++ b/QuestBoard/Views/Project/Add.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="mb-3 mt-3">
                 <label class="form-label">Description</label>
-                <input type="text" class="form-control bg-dark text-light" id="description" asp-for="Description" />
+                <input type="text" class="form-control bg-dark text-light" id="description" asp-for="shortDescription" />
             </div>
 
             <div class="mb-3 mt-3">
