--- a/QuestBoard/Views/Project/Edit.cshtml
+++ b/QuestBoard/Views/Project/Edit.cshtml
@@ -8,11 +8,18 @@
 
 }
 <form method="post"> 
-<div class="py-2 mb-3 siteHeader" >
+<div class="py-2 mb-2 siteHeader" >
     <div class="container">
         <h2>@Model.Name</h2>
     </div>
 </div>
+
+    <a class="btn btn-secondary" asp-area=""
+       asp-controller="Project"
+       asp-action="List"
+       >
+        Back
+    </a>
 
 <div class="container statusPageContainer  mb-3 ">
     
@@ -28,11 +35,14 @@
                 </div>
                 
                 <div class="mb-3">
-                    <label class="form-label">Description</label>
-                    <input type="text" class=" form-control bg-dark text-light" id="description-input" asp-for="Description" /> 
+                    <label class="form-label">Short Description</label>
+                    <input type="text" class=" form-control bg-dark text-light" id="shortDescription-input" asp-for="shortDescription" /> 
                 </div>
-               
 
+                <div class="mb-3">
+                    <label class="form-label">Description</label>
+                    <input type="text" class=" form-control bg-dark text-light" id="description-input" asp-for="Description" />
+                </div>
                
         </div>
        
