--- a/QuestBoard/Views/Quest/Add.cshtml
+++ b/QuestBoard/Views/Quest/Add.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">Type</label>
-                <input type="text" class="form-control bg-dark text-light" id="type" asp-for="Type" />
+                <input type="text" class="form-control bg-dark text-light" id="type" asp-for="Deadline" />
             </div>
 
             <!-- add Subtasks -->
