added: tinyMCE and improved UI

--- a/QuestBoard/Views/Project/Add.cshtml
+++ b/QuestBoard/Views/Project/Add.cshtml
@@ -18,14 +18,11 @@
                 <input type="text" class="form-control bg-dark text-light" id="name" asp-for="Name" />
             </div>
             <div class="mb-3 mt-3">
-                <label class="form-label">Description</label>
+                <label class="form-label">Short Description</label>
                 <input type="text" class="form-control bg-dark text-light" id="description" asp-for="shortDescription" />
             </div>
 
-            <div class="mb-3 mt-3">
-                <label class="form-label">Add Crew</label>
-                <input type="text" class="form-control bg-dark text-light" id="addCrew" />
-            </div>
+           
 
             <div class="mt-3">
                 <button class="btn btn-success type="submit">Save</button>
