--- a/QuestBoard/Views/Quest/Edit.cshtml
+++ b/QuestBoard/Views/Quest/Edit.cshtml
@@ -7,17 +7,22 @@
 <form method="post">
      @if(Model != null)
     {
-        <div class="py-2 mb-2 siteHeader">
+        <div class="py-2 mb-2 siteHeader d-flex">
             <div class="container">
                 <h2>Task: @Model.Name</h2>
             </div>
-        </div>
-                <a class="btn btn-secondary" asp-area=""
-                    asp-controller="Project"
-                    asp-action="Edit"
-                    asp-route-id ="@Model.ProjectId">
+
+            <div>
+                <a class="btn btn-success me-1" style="border-radius: 0;" asp-area=""
+                   asp-controller="Project"
+                   asp-action="Edit"
+                   asp-route-id="@Model.ProjectId">
                     Back
                 </a>
+            </div>
+           
+        </div>
+               
 <div class="">
 
     <div class="container statusPageContainer ">
