--- a/QuestBoard/Views/Shared/_Layout.cshtml
+++ b/QuestBoard/Views/Shared/_Layout.cshtml
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/QuestBoard.styles.css" asp-append-version="true" />
+
+    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
 <body >
     <header class="sticky-top">
