added: up- and download documents improved UI

--- a/QuestBoard/Views/Project/Edit.cshtml
+++ b/QuestBoard/Views/Project/Edit.cshtml
@@ -32,8 +32,9 @@
 
         <div>
             <a class="btn btn-success me-1" style="border-radius: 0;" asp-area=""
-               asp-controller="Project"
-               asp-action="List">
+               asp-controller="Documents"
+               asp-action="List"
+               asp-route-projectID="@Model.Id">
                 Documents
             </a>
         </div>
