--- a/QuestBoard/Views/Project/Edit.cshtml
+++ b/QuestBoard/Views/Project/Edit.cshtml
@@ -24,7 +24,7 @@
 
         <div>
             <a class="btn btn-success me-1" style="border-radius: 0;" asp-area=""
-               asp-controller="Project"
+               asp-controller="ProjectForum"
                asp-action="List">
                 Discussions
             </a>
