--- a/QuestBoard/Views/ProjectForum/ShowThread.cshtml
+++ b/QuestBoard/Views/ProjectForum/ShowThread.cshtml
@@ -7,7 +7,7 @@
 
 @if(Model != null)
 {
-    <div class="siteHeader d-flex">
+    <div class="py-2 mb-2 siteHeader d-flex">
         <div class="container">
             <h2>@Model[0].ThreadName</h2>
         </div>
