added: Account Settings Page improved forum UI

--- a/QuestBoard/Views/ProjectForum/ShowThread.cshtml
+++ b/QuestBoard/Views/ProjectForum/ShowThread.cshtml
@@ -47,7 +47,7 @@
             <div class="container">
                 @for (int i= 1; i < Model.Count(); i++)
                 {
-                    <div class="d-flex mb-3 p-3 border rounded" >
+                    <div class="d-flex mb-3 p-3" >
                         <div class="me-3">
                            <!-- <img src="//post.User.ProfilePictureUrl" alt="User Avatar" class="rounded-circle" width="50">-->
                         </div>
