--- a/QuestBoard/Views/Account/ProfilSettings.cshtml
+++ b/QuestBoard/Views/Account/ProfilSettings.cshtml
@@ -1,4 +1,5 @@
-﻿@*
+﻿@model QuestBoard.Models.ViewModes.AccountData
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
@@ -19,31 +20,36 @@
     </div>
 
     <div class="statusPageSidebar">
-       <form action="/Documents/Upload" method="post" id="uploadForm" enctype="multipart/form-data">
+        <form action="/Account/UploadPicture" method="post" id="uploadForm" enctype="multipart/form-data">
             <h2 class="mb-4 ">Upload a Profil Picture</h2>
-            <img class="mb-4 round-img" src="/files/images/DefaultPicxcfInvert.png" />
+            <img class="mb-4 round-img" src="/files/images/DefaultPicxcfInvert.png" alt="Profil Picture"/>
 
             <input type="file" id="picture" class="form-control bg-dark text-light mb-3 " name="picture" />
-            <button class="btn btn-light" type="button" id="btn_upload" onclick="checkFileSize()">Upload</button>
+            <button class="btn btn-light" type="submit" id="btn_upload" >Upload</button>
        </form>
     </div>
 
     <div class="main">
 
-        <form method="post">
+        <form action="/Account/ProfilSettings" method="post">
             <div class="mb-3">
                 <label class="form-label">Name</label>
-                <input type="text" class="form-control bg-dark text-light" id="Name" />
+                <input type="text" class="form-control bg-dark text-light" asp-for="name" id="Name" />
+                <input type="hidden" class="form-control bg-dark text-light" asp-for="id" id="id" />
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Email</label>
-                <input type="text" class="form-control bg-dark text-light" id="Email" />
+                <input type="text" class="form-control bg-dark text-light" asp-for="email" id="Email" />
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Password</label>
-                <input type="text" class="form-control bg-dark text-light" id="Password" />
+                <input type="password" class="form-control bg-dark text-light mb-3" " asp-for="password" id="Password" />
+                <label class="form-label">New Password</label>
+                <input type="password" class="form-control bg-dark text-light mb-3" " asp-for="newPassword" id="newPassword" />
+                <label class="form-label">New Password Confirmation</label>
+                <input type="password" class="form-control bg-dark text-light" asp-for="newPasswordConfirm" id="newPasswordConfirm" />
             </div>
             <button class="btn btn-success" type="submit">Save</button>
         </form>
@@ -61,3 +67,9 @@
         </div>
     </div>
 </div>
+
+@section Scripts{
+    <script>
+
+    </script>
+}
