--- a/QuestBoard/Views/Shared/_Layout.cshtml
+++ b/QuestBoard/Views/Shared/_Layout.cshtml
@@ -1,5 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using System.Security.Claims;
+@using System.Security.Claims
+
+
+
 @inject SignInManager<IdentityUser> signInManager
 
 <!DOCTYPE html>
@@ -40,25 +43,25 @@
                             <ul class="dropdown-menu   ">
                                 <li>
                                     <a class="dropdown-item text-light"
-                                       asp-area=""
-                                       asp-controller="Project"
-                                       asp-action="Add">New Project</a>
+                                    asp-area=""
+                                    asp-controller="Project"
+                                    asp-action="Add">New Project</a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item text-light"
-                                       asp-area=""
-                                       asp-controller="Project"
-                                       asp-action="List">My Projects</a>
+                                    asp-area=""
+                                    asp-controller="Project"
+                                    asp-action="List">My Projects</a>
                                 </li>
-                                
+
                             </ul>
                         </li>
 
                         @if (signInManager.IsSignedIn(User))
                         {
-                        <li>
-                            <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="ProfilSettings">Settings</a>
-                        </li>
+                            <li>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="ProfilSettings">Settings</a>
+                            </li>
                         }
 
                         <li class="nav-item dropdown">
@@ -116,28 +119,33 @@
                             <div class="me-3 text-light d-flex">
                                 <div class="mt-1 me-3">@User?.Identity?.Name</div>
                                 <!--//User.FindFirst(ClaimTypes.NameIdentifier)?.Value-->
-                                <img class="round-img-small" src="/files/images/DefaultPicxcfInvert.png" />
+                                
+                                    <img class="round-img-small" src="/files/images/DefaultPicxcfInvert.png" />
+
+                                
+
+
                             </div>
 
                             <a class="btn me-3 bg-light text-dark"
-                               asp-area=""
-                               asp-controller="Account"
-                               asp-action="Logout">
+                            asp-area=""
+                            asp-controller="Account"
+                            asp-action="Logout">
                                 Logout
                             </a>
                         }
                         else
                         {
                             <a class="btn me-3 bg-light text-dark"
-                               asp-area=""
-                               asp-controller="Account"
-                               asp-action="Login">
+                            asp-area=""
+                            asp-controller="Account"
+                            asp-action="Login">
                                 Login
                             </a>
                             <a class="btn me-3 bg-light text-dark"
-                               asp-area=""
-                               asp-controller="Account"
-                               asp-action="Register">
+                            asp-area=""
+                            asp-controller="Account"
+                            asp-action="Register">
                                 Register
                             </a>
                         }
@@ -164,3 +172,6 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+
+
