display ProfilePicture in the navbar

--- a/QuestBoard/Views/Shared/_Layout.cshtml
+++ b/QuestBoard/Views/Shared/_Layout.cshtml
@@ -120,11 +120,11 @@
                                 <div class="mt-1 me-3">@User?.Identity?.Name</div>
                                 <!--//User.FindFirst(ClaimTypes.NameIdentifier)?.Value-->
                                 
-                                    <img class="round-img-small" src="/files/images/DefaultPicxcfInvert.png" />
+                                   
+                                <img class="round-img-small" src="@ViewData["ProfilImage"]" alt="Profilbild"  />
 
                                 
-
-
+                                
                             </div>
 
                             <a class="btn me-3 bg-light text-dark"
